2013-09-06  Cedric Bail

	* Edje: Add border information to Image sets.

2013-09-05  Cedric Bail

	* Evas: Add evas_object_smart_iterator_new().

2013-09-04  Michael Bouchaud (yoz)

        * fix edje_object_scale_set to be recursive

2013-09-03  Tom Hacohen

	* Evas textblock: fixed an issue with markup_get and markup_to_utf8
	behaving differently (markup_get was misbehaving).

2013-09-02  Shinwoo Kim

        * Ecore_Input_Evas: Check the state of last mouse event more properly.

2013-08-29  Boris Faure

	* Edje: export EFL_VERSION_MAJOR/MINOR when compiling edc files

2013-08-29  Cedric Bail

	* Evas: add interceptor for focus_set.

2013-08-28  Cedric Bail

	* Evas: use mmap/munmap to allocate surface.

2013-08-27  Jaehyun Cho

	* Edje: Fix edje play sample parameter checking.

2013-08-27  Tom Hacohen

	* Evas bidi: Fixed a bug causing BiDi not to work in some cases.

2013-08-20  David Seikel (onefang)

	* Edje Lua: Check for both Lua 5.1 and 5.2.

2013-08-13  Jihoon Kim

	* Ecore_IMF: add ecore_imf_context_input_panel_on_demand_set/get()

2013-08-09  Cedric Bail

	* Edje: add edje_object_mmap_set().

2013-08-08  Tom Hacohen

	* Evas textblock:  Make the ellipsis format the same as the surrounding.

2013-08-07  Tom Hacohen

	* Evas textblock: Use max ascent/descent at the edges of the textblock.

2013-08-07  Chris Michael

        * EFL: Require at least version 1.2 of the various wayland libraries to build EFL with wayland support.

2013-08-02  Yury Usischev

        * Add neon optimizations for several scaling/map routines in evas

2013-08-02  Cedric Bail

        * Evas: change mapping policy for image loader (RANDOM during header,
        SEQUENTIAL or WILLNEED during pixels reading).

2013-08-01  Cedric Bail

        * Edje: faster load time for Edje_Object using Evas_Object_Textblocks and many styles.

2013-07-31  Carsten Haitzler (The Rasterman)

        * Fix efl to use key not keyname (so xmodmap works).

2013-07-31  Cedric Bail
